@@ -49,6 +49,7 @@ public class ExtendedTypeMap {
 		classesForPrimitives.put("int", Integer.class.getName());
 	}
 
+	protected Map<String, String> typeAliases;
 	protected final Map<String, ExtendedType> typeMap;
 	protected ExtendedType defaultType;
 
@@ -67,6 +68,7 @@ public class ExtendedTypeMap {
 	public ExtendedTypeMap() {
 		this.defaultType = new ObjectType();
 		this.typeMap = new ConcurrentHashMap<>();
+		this.typeAliases = new ConcurrentHashMap<>(classesForPrimitives);
 		this.extendedTypeFactories = new CopyOnWriteArrayList<>();
 		this.internalTypeFactories = new CopyOnWriteArrayList<>();
 
@@ -168,13 +170,9 @@ public class ExtendedTypeMap {
 			return getDefaultType();
 		}
 
-		String nonPrimitive = classesForPrimitives.get(javaClassName);
-		if (nonPrimitive != null) {
-			javaClassName = nonPrimitive;
-		}
+		javaClassName = canonicalizedTypeName(javaClassName);
 
 		ExtendedType type = getExplictlyRegisteredType(javaClassName);
-
 		if (type != null) {
 			return type;
 		}
@@ -275,5 +273,30 @@ public class ExtendedTypeMap {
 		}
 
 		return null;
+	}
+	
+	/**
+	 * For the class name returns a name "canonicalized" for the purpose of
+	 * ExtendedType lookup.
+	 * 
+	 * @since 4.0
+	 */
+	protected String canonicalizedTypeName(String className) {
+
+		String canonicalized = typeAliases.get(className);
+		if (canonicalized == null) {
+
+			int index = className.indexOf('$');
+			if (index >= 0) {
+				canonicalized = className.replace('$', '.');
+			} else {
+				canonicalized = className;
+			}
+
+			typeAliases.put(className, canonicalized);
+
+		}
+
+		return canonicalized;
 	}
 }
