@@ -19,8 +19,6 @@
 
 package org.apache.cayenne.access.types;
 
-import org.junit.Test;
-
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNotSame;
@@ -28,58 +26,81 @@ import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertSame;
 import static org.junit.Assert.assertTrue;
 
+import org.apache.cayenne.access.types.InnerEnumHolder.InnerEnum;
+import org.junit.Before;
+import org.junit.Test;
+
 public class ExtendedTypeMapEnumsTest {
 
-    @Test
-    public void testCreateType1_5() {
-        ExtendedTypeMap map = new ExtendedTypeMap();
+	private ExtendedTypeMap map;
 
-        assertNull(map.createType(Object.class.getName()));
+	@Before
+	public void before() {
+		this.map = new ExtendedTypeMap();
+	}
 
-        ExtendedType type = map.createType(MockEnum.class.getName());
-        assertTrue(type instanceof EnumType);
-        assertEquals(MockEnum.class, ((EnumType) type).enumClass);
+	@Test
+	public void testCreateType_NoFactory() {
+		assertNull(map.createType(Object.class.getName()));
+	}
 
-        ExtendedType type2 = map.createType(MockEnum2.class.getName());
-        assertNotSame(type, type2);
-    }
+	@Test
+	public void testCreateType_Enum() {
 
-    @Test
-    public void testCreateType1_5InnerEnum() {
-        ExtendedTypeMap map = new ExtendedTypeMap();
+		ExtendedType type1 = map.createType(MockEnum.class.getName());
+		assertTrue(type1 instanceof EnumType);
+		assertEquals(MockEnum.class, ((EnumType<?>) type1).enumClass);
 
-        ExtendedType type = map.createType(InnerEnumHolder.InnerEnum.class.getName());
-        assertTrue(type instanceof EnumType);
-        assertEquals(InnerEnumHolder.InnerEnum.class, ((EnumType) type).enumClass);
+		ExtendedType type2 = map.createType(MockEnum2.class.getName());
+		assertNotSame(type1, type2);
+	}
 
-        // use a string name with $
-        ExtendedType type1 = map.createType(InnerEnumHolder.class.getName()
-                + "$InnerEnum");
-        assertNotNull(type1);
-        assertSame(type.getClassName(), type1.getClassName());
+	@Test
+	public void testCreateType_InnerEnum() {
 
-        // use a string name with .
-        ExtendedType type2 = map.createType(InnerEnumHolder.class.getName()
-                + ".InnerEnum");
-        assertNotNull(type2);
-        assertSame(type.getClassName(), type2.getClassName());
-    }
+		ExtendedType type = map.createType(InnerEnumHolder.InnerEnum.class.getName());
+		assertTrue(type instanceof EnumType);
+		assertEquals(InnerEnumHolder.InnerEnum.class, ((EnumType<?>) type).enumClass);
 
-    @Test
-    public void testGetDefaultType1_4() {
-        ExtendedTypeMap map = new ExtendedTypeMap();
-        map.internalTypeFactories.clear();
+		// use a string name with $
+		ExtendedType type1 = map.createType(InnerEnumHolder.class.getName() + "$InnerEnum");
+		assertNotNull(type1);
+		assertEquals(type.getClassName(), type1.getClassName());
 
-        assertNull(map.createType(Object.class.getName()));
-        assertNull(map.createType(MockEnum.class.getName()));
-        assertNull(map.createType(MockEnum2.class.getName()));
-    }
+		// use a string name with .
+		ExtendedType type2 = map.createType(InnerEnumHolder.class.getName() + ".InnerEnum");
+		assertNotNull(type2);
+		assertEquals(type.getClassName(), type2.getClassName());
+	}
 
-    @Test
-    public void testGetType() {
-        ExtendedTypeMap map = new ExtendedTypeMap();
-        ExtendedType type = map.getRegisteredType(MockEnum.class.getName());
-        assertNotNull(type);
-        assertTrue(type instanceof EnumType);
-    }
+	@Test
+	public void testGetRegisteredType() {
+		ExtendedType type = map.getRegisteredType(MockEnum.class);
+		assertNotNull(type);
+		assertTrue(type instanceof EnumType);
+
+		assertSame(type, map.getRegisteredType(MockEnum.class));
+		assertSame(type, map.getRegisteredType(MockEnum.class.getName()));
+	}
+
+	@Test
+	public void testGetRegisteredType_InnerEnum() {
+
+		assertEquals(0, map.extendedTypeFactories.size());
+
+		ExtendedType byType = map.getRegisteredType(InnerEnum.class);
+
+		// this and subsequent tests verify that no memory leak occurs per
+		// CAY-2066
+		assertEquals(1, map.extendedTypeFactories.size());
+
+		assertSame(byType, map.getRegisteredType(InnerEnum.class));
+		assertEquals(1, map.extendedTypeFactories.size());
+
+		assertSame(byType, map.getRegisteredType(InnerEnumHolder.class.getName() + "$InnerEnum"));
+		assertEquals(1, map.extendedTypeFactories.size());
+
+		assertSame(byType, map.getRegisteredType(InnerEnumHolder.class.getName() + ".InnerEnum"));
+		assertEquals(1, map.extendedTypeFactories.size());
+	}
 }
