@@ -23,6 +23,7 @@ CAY-2065 Pluggable serialization and connectivity layers for ROP
 Bug Fixes:
 
 CAY-2064 Issue with BeanAccessor for classes with complex inheritance
+CAY-2066 Fixes for inner enums handling in ExtendedTypeMap
 
 ----------------------------------
 Release: 4.0.M3
